<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/countriesFragment">

    <fragment
        android:id="@+id/countriesFragment"
        android:name="com.example.pangeaapp.ui.countries.CountriesFragment"
        android:label="@string/title_countries" />

    <fragment
        android:id="@+id/packagesFragment"
        android:name="com.example.pangeaapp.ui.packages.PackagesFragment"
        android:label="@string/title_packages">
        <argument
            android:name="countryCode"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/esimsFragment"
        android:name="com.example.pangeaapp.ui.esims.EsimsFragment"
        android:label="@string/title_esims" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.pangeaapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
</navigation>