<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:titleTextColor="?android:textColorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSingle"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:cornerRadius="24dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toggle_one_country"
                android:checkable="true"
                app:backgroundTint="@color/toggle_bg"
                android:textColor="@color/toggle_text"
                app:strokeColor="@color/border" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiple"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toggle_multiple"
                android:checkable="true"
                app:backgroundTint="@color/toggle_bg"
                android:textColor="@color/toggle_text"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/edtSearchCountries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search_countries"
        android:padding="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCountries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_bottom_nav" />
    <include
        android:id="@+id/empty"
        layout="@layout/view_empty"
        android:visibility="gone"/>
</LinearLayout>